--- a/styles.css
+++ b/styles.css
@@ -1,55 +1,88 @@
-html, body {
-	padding: 10px 0;
+body {
+  padding-top: 1em;
 }
 
-h1 {
-  font-family: Ubuntu, Calibri, Arial, sans-serif;
-  font-size: 2.2em;
+.done {
+  color: #777;
+  text-decoration: line-through;
 }
 
-/* Spinner http://tobiasahlin.com/spinkit/ */
-.spinner {
-  margin: 30px auto 0;
-  width: 70px;
-  text-align: center;
+.todo-item-label {
+  margin-left: .5em;
 }
 
-.spinner > div {
-  width: 18px;
-  height: 18px;
-  background-color: #337ab7;
-
-  border-radius: 100%;
-  display: inline-block;
-  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+.kept-default button {
+  margin-left: .35em;
 }
 
-.spinner .bounce1 {
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
+.kept-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-content: stretch;
+  align-items:stretch;
+  width: 100%;
+  height: 100%;
 }
 
-.spinner .bounce2 {
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
+.kept-columns {
+  align-self: auto;
+  flex: 1 0 0;
+  margin: 0 1em;
+}
+.kept-columns:first-child {
+  margin-left: 0;
+}
+.kept-columns:last-child {
+  margin-right: 0;
 }
 
-@-webkit-keyframes sk-bouncedelay {
-  0%, 80%, 100% { -webkit-transform: scale(0) }
-  40% { -webkit-transform: scale(1.0) }
+.kept-panel {
+  width: 100%;
+  margin-right: 15px;
+  /* Webkit "break-inside: avoid;" hack */
+  -webkit-column-break-after: avoid;
+  -webkit-column-break-before: avoid;
+  -webkit-column-break-inside: avoid;
+  /* Standard */
+  -webkit-break-inside: avoid;
+  -moz-break-inside: avoid;
+  break-inside: avoid;
 }
-
-@keyframes sk-bouncedelay {
-  0%, 80%, 100% {
-    -webkit-transform: scale(0);
-    transform: scale(0);
-  } 40% {
-    -webkit-transform: scale(1.0);
-    transform: scale(1.0);
+  .kept-panel .panel-heading {
+    cursor: move;
   }
+    .kept-modal .kept-panel .panel-heading {
+      cursor: default;
+    }
+    .kept-panel h3 a {
+      display: block;
+      float: right;
+      margin-left: .5em;
+    }
+
+.targetted {
+  border: 1px dashed #333;
 }
 
-img {
-	max-width: 80%;
+.modal {
+  background: rgba(0, 0, 0, .65);
+  min-width: 320px;
 }
+
+.modal-body {
+  padding-bottom: 0;
+}
+
+.todo-form li input[type="text"] {
+  width: 445px;
+}
+  @media (max-width: 768px) {
+    .todo-form li .form-control {
+      display: inline;
+    }
+    .todo-form li input[type="text"] {
+      width: 145px;
+    }
+  }
